Fixed sizing of pictures on mobile devices.

--- a/css/custom.css
+++ b/css/custom.css
@@ -36,6 +36,10 @@ hr {
     border-color: #999999;
 }
 
+img {
+    border-radius: 5px;
+}
+
 .brand,
 .address-bar {
     display: none;
@@ -105,6 +109,13 @@ footer {
 footer p {
     margin: 0;
     padding: 10px 0;
+}
+
+@media screen and (max-width:767px) {
+    .portrait {
+        max-width: 200px;
+        margin: 0 auto;
+    }
 }
 
 @media screen and (min-width:768px) {
